2009-12-08  Dmitry Titov  <dimich@chromium.org>

        Rubber-stamped by David Levin.

        Revert and reopen "Add asserts to RefCounted to make sure ref/deref happens on the right thread."
        It may have caused massive increase of reported leaks on the bots.
        https://bugs.webkit.org/show_bug.cgi?id=31639

        * DumpRenderTree/ForwardingHeaders/wtf/ThreadVerifier.h: Removed.

2009-12-08  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Darin Adler.

        Add asserts to RefCounted to make sure ref/deref happens on the right thread.
        https://bugs.webkit.org/show_bug.cgi?id=31639

        * DumpRenderTree/ForwardingHeaders/wtf/ThreadVerifier.h: Added.

2009-12-08  David Levin  <levin@chromium.org>

        Reviewed by Adam Barth.

        [check-webkit-style] False positive for camel case of JSC op codes
        https://bugs.webkit.org/show_bug.cgi?id=32192

        * Scripts/modules/cpp_style.py: Added an exception for the JSC op
          code functions and const_iterator as well since I noticed a false
          positive there when testing the fix.
        * Scripts/modules/cpp_style_unittest.py: Added tests for these
          changes.

2009-12-08  Nikolas Zimmermann  <nzimmermann@rim.com>

        Rubber-stamped by Maciej Stachowiak.

        Turn on (SVG) Filters for Win.
        https://bugs.webkit.org/show_bug.cgi?id=32224

        * Scripts/webkitdirs.pm:

2009-12-08  Nikolas Zimmermann  <nzimmermann@rim.com>

        Rubber-stamped by Maciej Stachowiak.

        Turn on (SVG) Filters for Gtk.
        https://bugs.webkit.org/show_bug.cgi?id=32224

        * Scripts/build-webkit:

2009-12-07  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by David Levin.

        [check-webkit-style] S_OK is a fine identifier
        https://bugs.webkit.org/show_bug.cgi?id=32225

        * Scripts/modules/cpp_style.py:
        * Scripts/modules/cpp_style_unittest.py:

2009-12-07  Nikolas Zimmermann  <nzimmermann@rim.com>
